[package]
name = "urlprobe"
authors = ["kenjitheman"]
version = "0.1.0"
edition = "2021"
description = "simple cli tool for probing URLs for their status code and performance metrics"
homepage = "https://github.com/kenjitheman/urlprobe"
repository = "https://github.com/kenjitheman/urlprobe.git"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
csv = "1.3.0"
reqwest = "0.11.22"
serde = "1.0.189"
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
tokio-test = "0.4.3"

[dev-dependencies]
tempfile = "3.8.0"
